fixed table of contents z-index

--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ nav{
     text-align:justify;
     list-style: none;
     text-decoration: none;
-    z-index: -1;
+    z-index: 1;
     box-shadow:0 0 15px 4px rgba(0,0,0,0.39);
 }
 .content a{
